cabal-version:      2.2
name:               Z-YAML
version:            0.3.1.0
synopsis:           YAML tools
description:        YAML reading & writing tools for Z project.
license:            BSD3
license-file:       LICENSE
copyright:          (c) Dong Han, 2020
author:             Dong Han
maintainer:         winterland1989@gmail.com
category:           Data
homepage:           https://github.com/haskell-Z/z-yaml
bug-reports:        https://github.com/haskell-Z/z-yaml/issues
build-type:         Simple
extra-source-files: CHANGELOG.md
                    third_party/libyaml/src/yaml_private.h
                    third_party/libyaml/include/yaml.h

library
  exposed-modules:    Z.Data.YAML
                      Z.Data.YAML.FFI
  build-depends:      base                 == 4.*
                    , Z-Data               >= 0.5 && < 1
                    , Z-IO                 >= 0.5 && < 1
                    , primitive            >= 0.5 && < 0.8
                    , scientific           == 0.3.*
                    , transformers         == 0.5.*
                    , unordered-containers == 0.2.*
  default-language:   Haskell2010
  default-extensions: MultiParamTypeClasses
                      RankNTypes
                      ExistentialQuantification
                      ScopedTypeVariables
                      FlexibleContexts
                      FlexibleInstances
                      CPP
                      KindSignatures
                      BangPatterns
                      TemplateHaskell
                      GeneralizedNewtypeDeriving
                      MagicHash
                      TypeFamilies
                      StandaloneDeriving
                      UnliftedFFITypes
                      CApiFFI
                      TypeOperators
                      RecordWildCards
                      OverloadedStrings
                      UnboxedTuples
                      DeriveGeneric
                      DefaultSignatures
                      QuasiQuotes
                      ViewPatterns
                      TupleSections
                      MultiWayIf
                      ConstraintKinds
                      PolyKinds
                      DataKinds
                      BinaryLiterals
                      PatternSynonyms
                      PartialTypeSignatures
                      DeriveAnyClass
                      TypeApplications
                      TypeFamilyDependencies
                      DerivingStrategies
                      QuantifiedConstraints
  cc-options:         -DYAML_VERSION_STRING="0.2.5" -DYAML_VERSION_MAJOR=0
                      -DYAML_VERSION_MINOR=2 -DYAML_VERSION_PATCH=5
  c-sources:          cbits/hs_yaml.c, third_party/libyaml/src/api.c,
                      third_party/libyaml/src/dumper.c, third_party/libyaml/src/emitter.c,
                      third_party/libyaml/src/loader.c, third_party/libyaml/src/parser.c,
                      third_party/libyaml/src/reader.c, third_party/libyaml/src/scanner.c,
                      third_party/libyaml/src/writer.c
  include-dirs:       third_party/libyaml/src, third_party/libyaml/include
